// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/gitea/index createPr should use base branch by default 1`] = `
Object {
  "bodyStruct": Object {
    "hash": "9d586a6aedc4e7cb205276933c9e474cd3c2b341d3340458c31eb750795f197d",
  },
  "cannotMergeReason": undefined,
  "createdAt": "2014-04-01T05:14:20Z",
  "displayNumber": "Pull Request #42",
  "hasAssignees": false,
  "number": 42,
  "sha": "0d9c7726c3d628b7e28af234595cfd20febdbf8e",
  "sourceBranch": "pr-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "devel",
  "title": "pr-title",
}
`;

exports[`modules/platform/gitea/index createPr should use default branch if requested 1`] = `
Object {
  "bodyStruct": Object {
    "hash": "9d586a6aedc4e7cb205276933c9e474cd3c2b341d3340458c31eb750795f197d",
  },
  "cannotMergeReason": undefined,
  "createdAt": "2014-04-01T05:14:20Z",
  "displayNumber": "Pull Request #42",
  "hasAssignees": false,
  "number": 42,
  "sha": "0d9c7726c3d628b7e28af234595cfd20febdbf8e",
  "sourceBranch": "pr-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "master",
  "title": "pr-title",
}
`;

exports[`modules/platform/gitea/index getPr should fallback to direct fetching if cache fails 1`] = `
Object {
  "bodyStruct": Object {
    "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
  },
  "cannotMergeReason": "pr.mergeable=\\"false\\"",
  "createdAt": "2015-03-22T20:36:16Z",
  "displayNumber": "Pull Request #1",
  "hasAssignees": false,
  "number": 1,
  "sha": "some-head-sha",
  "sourceBranch": "some-head-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "some-base-branch",
  "title": "Some PR",
}
`;

exports[`modules/platform/gitea/index getPr should return enriched pull request which exists if open 1`] = `
Object {
  "bodyStruct": Object {
    "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
  },
  "cannotMergeReason": undefined,
  "createdAt": "2015-03-22T20:36:16Z",
  "displayNumber": "Pull Request #1",
  "hasAssignees": false,
  "number": 1,
  "sha": "some-head-sha",
  "sourceBranch": "some-head-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "some-base-branch",
  "title": "Some PR",
}
`;

exports[`modules/platform/gitea/index getPrList should filter list by creator 1`] = `
Object {
  "endpoint": "https://gitea.com/api/v1/",
  "gitAuthor": "Renovate Bot <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index getPrList should filter list by creator 2`] = `
Array [
  Object {
    "bodyStruct": Object {
      "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2015-03-22T20:36:16Z",
    "displayNumber": "Pull Request #1",
    "hasAssignees": false,
    "number": 1,
    "sha": "some-head-sha",
    "sourceBranch": "some-head-branch",
    "sourceRepo": "some/repo",
    "state": "open",
    "targetBranch": "some-base-branch",
    "title": "Some PR",
  },
  Object {
    "bodyStruct": Object {
      "hash": "916e5965a20785df1883ff5dc219508a1070ae1f37ccb64e954526f3ca1d22f4",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2011-08-18T22:30:38Z",
    "displayNumber": "Pull Request #2",
    "hasAssignees": false,
    "number": 2,
    "sha": "other-head-sha",
    "sourceBranch": "other-head-branch",
    "sourceRepo": "some/repo",
    "state": "closed",
    "targetBranch": "other-base-branch",
    "title": "Other PR",
  },
]
`;

exports[`modules/platform/gitea/index getPrList should return list of pull requests 1`] = `
Array [
  Object {
    "bodyStruct": Object {
      "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2015-03-22T20:36:16Z",
    "displayNumber": "Pull Request #1",
    "hasAssignees": false,
    "number": 1,
    "sha": "some-head-sha",
    "sourceBranch": "some-head-branch",
    "sourceRepo": "some/repo",
    "state": "open",
    "targetBranch": "some-base-branch",
    "title": "Some PR",
  },
  Object {
    "bodyStruct": Object {
      "hash": "916e5965a20785df1883ff5dc219508a1070ae1f37ccb64e954526f3ca1d22f4",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2011-08-18T22:30:38Z",
    "displayNumber": "Pull Request #2",
    "hasAssignees": false,
    "number": 2,
    "sha": "other-head-sha",
    "sourceBranch": "other-head-branch",
    "sourceRepo": "some/repo",
    "state": "closed",
    "targetBranch": "other-base-branch",
    "title": "Other PR",
  },
]
`;

exports[`modules/platform/gitea/index getRepos should return an array of repos 1`] = `
Array [
  "a/b",
  "c/d",
]
`;

exports[`modules/platform/gitea/index initPlatform() should support custom endpoint 1`] = `
Object {
  "endpoint": "https://gitea.renovatebot.com/",
  "gitAuthor": "Renovate Bot <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index initPlatform() should support default endpoint 1`] = `
Object {
  "endpoint": "https://gitea.com/api/v1/",
  "gitAuthor": "Renovate Bot <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index initPlatform() should use username as author name if full name is missing 1`] = `
Object {
  "endpoint": "https://gitea.com/api/v1/",
  "gitAuthor": "renovate <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index initRepo should fall back to merge method "merge" 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`modules/platform/gitea/index initRepo should fall back to merge method "rebase-merge" 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`modules/platform/gitea/index initRepo should fall back to merge method "squash" 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;
